--- a/site/frames-chrome/14.html
+++ b/site/frames-chrome/14.html
@@ -9,26 +9,26 @@
   <body bgcolor="#06113C">
     <center>
       <a href="/frames/1.html">
-        <font color="#cccccc" size="2">Safari/Firefox Version</font></a
-      ><font color="#777777" size="2"> ~ </font>
-      <font color="#cccccc" size="2">Chrome Version</font>
-      <font color="#777777" size="2"> ~ </font>
-      <a href="/about.html"><font color="#cccccc" size="2">about</font></a>
-      <font color="#777777" size="2"> ~ </font>
+        <font color="#cccccc">Safari/Firefox Version</font></a
+      ><font color="#777777"> ~ </font>
+      <font color="#cccccc">Chrome Version</font>
+      <font color="#777777"> ~ </font>
+      <a href="/about.html"><font color="#cccccc">about</font></a>
+      <font color="#777777"> ~ </font>
       <a href="https://www.alanwsmith.com/"
-        ><font color="#cccccc" size="2">alanwsmith.com</font></a
+        ><font color="#cccccc">alanwsmith.com</font></a
       >
-      <font color="#777777" size="2"> ~ </font>
+      <font color="#777777"> ~ </font>
 
       <a href="https://links.alanwsmith.com"
-        ><font color="#cccccc" size="2">links</font></a
+        ><font color="#cccccc">links</font></a
       >
-      <font color="#777777" size="2"> ~ </font>
+      <font color="#777777"> ~ </font>
       <a href="https://podcast.alanwsmith.com"
-        ><font color="#cccccc" size="2">podcast</font></a
+        ><font color="#cccccc">podcast</font></a
       >
       <br />
-      <font color="#777777"> ------ </font>
+      <font color="#777777"> ---- </font>
       <table>
         <tr>
           <td width="440">
