--- a/site/frames/7.html
+++ b/site/frames/7.html
@@ -33,7 +33,7 @@
       <table>
         <tbody>
           <tr>
-            <td width="540">
+            <td width="440">
               <font color="#cccccc">
                 This piece is an experiment in creating an animation using only
                 HTML. There is no JavaScript, CSS, or images involved. You can
@@ -50,7 +50,7 @@
           </tr>
         </tbody>
       </table>
-      <font color="#dddddd">
+      <font color="#dddddd" size="1">
         <pre><code>
     
                                 : ,                     
