Updated OG Image

--- a/site/index.html
+++ b/site/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="refresh" content="1;URL='frames/2.html'" />
     <meta http-equif="expires" content="Mon, 20 Jan 2025 11:12:01 GMT" />
     <title>HTML Animation - No JavaScript, CSS, or Images</title>
@@ -91,28 +92,28 @@
   </head>
   <body bgcolor="#06113C">
     <center>
-      <font color="#cccccc" size="2">Safari/Firefox Version</font>
-      <font color="#777777" size="2"> ~ </font>
+      <font color="#cccccc">Safari/Firefox Version</font>
+      <font color="#777777"> ~ </font>
       <a href="/frames-chrome/1.html"
-        ><font color="#cccccc" size="2">Chrome Version</font></a
+        ><font color="#cccccc">Chrome Version</font></a
       >
-      <font color="#777777" size="2"> ~ </font>
-      <a href="/about.html"><font color="#cccccc" size="2">about</font></a>
-      <font color="#777777" size="2"> ~ </font>
+      <font color="#777777"> ~ </font>
+      <a href="/about.html"><font color="#cccccc">about</font></a>
+      <font color="#777777"> ~ </font>
       <a href="https://www.alanwsmith.com/"
-        ><font color="#cccccc" size="2">alanwsmith.com</font></a
+        ><font color="#cccccc">alanwsmith.com</font></a
       >
-      <font color="#777777" size="2"> ~ </font>
+      <font color="#777777"> ~ </font>
 
       <a href="https://links.alanwsmith.com"
-        ><font color="#cccccc" size="2">links</font></a
+        ><font color="#cccccc">links</font></a
       >
-      <font color="#777777" size="2"> ~ </font>
+      <font color="#777777"> ~ </font>
       <a href="https://podcast.alanwsmith.com"
-        ><font color="#cccccc" size="2">podcast</font></a
+        ><font color="#cccccc">podcast</font></a
       >
       <br />
-      <font color="#777777" size="2"> ------ </font>
+      <font color="#777777"> ------ </font>
       <table>
         <tr>
           <td width="440">
