Added headers to all pages

--- a/site/frames-chrome/11.html
+++ b/site/frames-chrome/11.html
@@ -5,6 +5,88 @@
     <meta http-equiv="refresh" content="0.1;URL='12.html'" />
     <meta http-equiv="expires" content="Mon, 20 Jan 2025 11:12:01 GMT" />
     <title>HTML Animation - Chrome</title>
+    <meta
+      property="og:title"
+      content="HTML Animation - No JavaScript, CSS, or Images"
+    />
+    <meta
+      name="twitter:title"
+      content="HTML Animation - No JavaScript, CSS, or Images"
+    />
+
+    <meta
+      name="description"
+      content="Playing around with making animations without JavaScript, CSS, or Images"
+    />
+    <meta
+      property="og:description"
+      content="Playing around with making animations without JavaScript, CSS, or Images"
+    />
+
+    <meta
+      property="og:image"
+      content="https://html-animation.alanwsmith.com/og-images/main.png"
+    />
+    <meta
+      name="twitter:image"
+      content="https://html-animation.alanwsmith.com/og-images/main.png"
+    />
+
+    <meta property="og:type" content="article" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:creator" content="@theidofalan" />
+
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/favicons/16x16.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/favicons/32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="96x96"
+      href="/favicons/96x96.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="128x128"
+      href="/favicons/128x128.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="196x196"
+      href="/favicons/196x196.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="228x228"
+      href="/favicons/228x228.png"
+    />
+    <link
+      rel="apple-touch-icon-precomposed"
+      sizes="152x152"
+      href="/favicons/152x152.png"
+    />
+    <link
+      rel="apple-touch-icon-precomposed"
+      sizes="167x167"
+      href="/favicons/167x167.png"
+    />
+    <link
+      rel="apple-touch-icon-precomposed"
+      sizes="180x180"
+      href="/favicons/180x180.png"
+    />
   </head>
   <body bgcolor="#06113C">
     <center>
