--- a/site/index.html
+++ b/site/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="refresh" content="1;URL='frames/2.html'" />
-    <meta http-equif="expires" content="Mon, 20 Jan 2025 11:12:01 GMT" />
+    <meta http-equiv="expires" content="Mon, 20 Jan 2025 11:12:01 GMT" />
     <title>HTML Animation - No JavaScript, CSS, or Images</title>
     <meta
       property="og:title"
