More messing with metatags to try to get the og image to show up

--- a/site/index.html
+++ b/site/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--
     <meta http-equiv="refresh" content="5;URL='frames/2.html'" />
     <meta http-equiv="expires" content="Mon, 20 Jan 2025 11:12:01 GMT" />
     -->
-    <title>HTML Animation - No JavaScript, CSS, or Images</title>
+    <title>HTML Animation ~ No JavaScript, CSS, or Images</title>
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@theidofalan" />
     <meta
       property="og:title"
-      content="HTML Animation - No JavaScript, CSS, or Images"
+      content="HTML Animation ~ No JavaScript, CSS, or Images"
+    />
+    <meta
+      name="twitter:title"
+      content="HTML Animation ~ No JavaScript, CSS, or Images"
     />
     <meta property="og:url" content="https://html-animation.alanwsmith.com/" />
 
@@ -28,6 +33,12 @@
       property="og:image"
       content="https://html-animation.alanwsmith.com/og-images/main.png"
     />
+
+    <meta
+      name="twitter:image"
+      content="https://html-animation.alanwsmith.com/og-images/main.png"
+    />
+
     <meta property="og:type" content="website" />
 
     <link
