Trying another change to metatags to see if the og image will show up on twitter

--- a/site/index.html
+++ b/site/index.html
@@ -4,39 +4,46 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="refresh" content="3;URL='frames/2.html'" />
-    <title>HTML Animation ~ No JavaScript, CSS, or Images</title>
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:creator" content="@theidofalan" />
-    <meta
-      property="og:title"
-      content="HTML Animation ~ No JavaScript, CSS, or Images"
-    />
-    <meta
-      name="twitter:title"
-      content="HTML Animation ~ No JavaScript, CSS, or Images"
-    />
-    <meta property="og:url" content="https://html-animation.alanwsmith.com/" />
 
+    <title>Animation In HTML ~ No JavaScript, CSS, or Images</title>
     <meta
       name="description"
       content="Playing around with making animations without JavaScript, CSS, or Images"
+    />
+
+    <meta property="og:url" content="https://html-animation.alanwsmith.com/" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Animation In HTML ~ No JavaScript, CSS, or Images"
     />
     <meta
       property="og:description"
       content="Playing around with making animations without JavaScript, CSS, or Images"
     />
-
     <meta
       property="og:image"
       content="https://html-animation.alanwsmith.com/og-images/main.png"
     />
 
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="html-animation.alanwsmih.com" />
+    <meta
+      property="twitter:url"
+      content="https://html-animation.alanwsmith.com/"
+    />
+    <meta
+      name="twitter:title"
+      content="Animation In HTML ~ No JavaScript, CSS, or Images"
+    />
+    <meta
+      name="twitter:description"
+      content="Playing around with making animations without JavaScript, CSS, or Images"
+    />
     <meta
       name="twitter:image"
       content="https://html-animation.alanwsmith.com/og-images/main.png"
     />
-
-    <meta property="og:type" content="website" />
 
     <link
       rel="icon"
