Moved to black text on white background to help supress flashing

--- a/site/about.html
+++ b/site/about.html
@@ -4,37 +4,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About HTML Animation</title>
   </head>
-  <body bgcolor="#06113C">
+  <body>
     <center>
-      <a href="/frames/1.html"
-        ><font color="#cccccc">Safari/Firefox Version</font></a
-      >
-      <font color="#777777"> ~ </font>
-      <a href="/frames-chrome/1.html"
-        ><font color="#cccccc">Chrome Version</font></a
-      >
-      <font color="#777777"> ~ </font>
-      <font color="#cccccc">about</font>
-      <font color="#777777"> ~ </font>
-      <a href="https://www.alanwsmith.com/"
-        ><font color="#cccccc">alanwsmith.com</font></a
-      >
-      <font color="#777777"> ~ </font>
+      <a href="/frames/1.html"><font>Safari/Firefox Version</font></a>
+      <font> ~ </font>
+      <a href="/frames-chrome/1.html"><font>Chrome Version</font></a>
+      <font> ~ </font>
+      <font>about</font>
+      <font> ~ </font>
+      <a href="https://www.alanwsmith.com/"><font>alanwsmith.com</font></a>
+      <font> ~ </font>
 
-      <a href="https://links.alanwsmith.com"
-        ><font color="#cccccc">links</font></a
-      >
-      <font color="#777777"> ~ </font>
-      <a href="https://podcast.alanwsmith.com"
-        ><font color="#cccccc">podcast</font></a
-      >
+      <a href="https://links.alanwsmith.com"><font>links</font></a>
+      <font> ~ </font>
+      <a href="https://podcast.alanwsmith.com"><font>podcast</font></a>
       <br />
-      <font color="#777777"> ------ </font>
+      <font> ------ </font>
       <table>
         <tbody>
           <tr>
             <td width="440">
-              <font color="#cccccc">
+              <font>
                 <p>
                   This piece is an experiment in creating an animation using
                   only HTML. There is no JavaScript, CSS, or images involved.
@@ -43,7 +33,7 @@
                 <p>
                   The frames consists of ascii art based on &quot;<a
                     href="https://en.wikipedia.org/wiki/The_Horse_in_Motion"
-                    ><font color="#cccccc">The Horse in Motion</font></a
+                    ><font>The Horse in Motion</font></a
                   >&quot; made by Eadweard Muybridge in 1878. Each frame is a
                   separate HTML page. Animation between pages is done with
                   `&lt;meta http-equiv=&quot;refresh&quot;&gt;` tags.
@@ -51,14 +41,10 @@
                 <p>
                   As of April, 2022, Safari and Firefox require whole seconds
                   for the refresh. So, the
-                  <a href="/frames/1.html"
-                    ><font color="#cccccc">basic version</font></a
-                  >
+                  <a href="/frames/1.html"><font>basic version</font></a>
                   is a set of eight frames running at 1FPS. Chrome allows
                   refresh times less than a second.
-                  <a href="/frames-chrome/1.html"
-                    ><font color="#cccccc">That version</font></a
-                  >
+                  <a href="/frames-chrome/1.html"><font>That version</font></a>
                   is sixteen frames set to change every 0.1 seconds which runs
                   at roughly 10FPS depending on the computer, network, etc...
                 </p>
@@ -72,20 +58,20 @@
                   This site is the forth in a series inspired by
                   <a
                     href="https://twitter.com/whitep4nth3r/status/1510568114966171649"
-                    ><font color="#cccccc">this tweet</font></a
+                    ><font>this tweet</font></a
                   >
                   from
                   <a href="https://twitter.com/whitep4nth3r"
-                    ><font color="#cccccc">whitep4nth3r</font></a
+                    ><font>whitep4nth3r</font></a
                   >. The other sites have
                   <a href="https://ascii-art.alanwsmith.com/"
-                    ><font color="#cccccc">ascii art</font></a
+                    ><font>ascii art</font></a
                   >, a
                   <a href="https://html-maze.alanwsmith.com/"
-                    ><font color="#cccccc">maze</font></a
+                    ><font>maze</font></a
                   >, and
                   <a href="https://pixel-art.alanwsmith.com/"
-                    ><font color="#cccccc">pixel art</font></a
+                    ><font>pixel art</font></a
                   >
                   (which is my other favorite).
                 </p>
@@ -93,7 +79,7 @@
                   Here&apos;s
                   <a
                     href="https://github.com/alanwsmith/html-animation.alanwsmith.com"
-                    ><font color="#cccccc">the source code</font></a
+                    ><font>the source code</font></a
                   >
                   if you&apos;re interested.
                 </p>
