--- a/site/frames-chrome/6.html
+++ b/site/frames-chrome/6.html
@@ -88,44 +88,37 @@
       href="/favicons/180x180.png"
     />
   </head>
-  <body bgcolor="#06113C">
+  <body>
     <center>
-      <a href="/frames/1.html">
-        <font color="#cccccc">Safari/Firefox Version</font></a
-      ><font color="#777777"> ~ </font>
-      <font color="#cccccc">Chrome Version</font>
-      <font color="#777777"> ~ </font>
-      <a href="/about.html"><font color="#cccccc">about</font></a>
-      <font color="#777777"> ~ </font>
-      <a href="https://www.alanwsmith.com/"
-        ><font color="#cccccc">alanwsmith.com</font></a
-      >
-      <font color="#777777"> ~ </font>
+      <a href="/frames/1.html"> <font>Safari/Firefox Version</font></a
+      ><font> ~ </font>
+      <font>Chrome Version</font>
+      <font> ~ </font>
+      <a href="/about.html"><font>about</font></a>
+      <font> ~ </font>
+      <a href="https://www.alanwsmith.com/"><font>alanwsmith.com</font></a>
+      <font> ~ </font>
 
-      <a href="https://links.alanwsmith.com"
-        ><font color="#cccccc">links</font></a
-      >
-      <font color="#777777"> ~ </font>
-      <a href="https://podcast.alanwsmith.com"
-        ><font color="#cccccc">podcast</font></a
-      >
+      <a href="https://links.alanwsmith.com"><font>links</font></a>
+      <font> ~ </font>
+      <a href="https://podcast.alanwsmith.com"><font>podcast</font></a>
       <br />
-      <font color="#777777"> ---- </font>
+      <font> ---- </font>
       <table>
         <tr>
           <td width="440">
-            <font color="#cccccc">
+            <font>
               This piece is an experiment in creating an animation using only
               HTML. There is no JavaScript, CSS, or images involved. You can
               read more about it
-              <a href="/about.html"><font color="#cccccc">here</font></a
+              <a href="/about.html"><font>here</font></a
               >. (Becasue of the refresh speed you might need to close the
               browser to stop it if the links don&apos;t work.)
             </font>
           </td>
         </tr>
       </table>
-      <font color="#dddddd" size="1">
+      <font size="1">
         <pre><code>
     
                                   ,                     
