--- a/site/index.html
+++ b/site/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="refresh" content="3;URL='frames/2.html'" />
+    <meta http-equiv="refresh" content="4;URL='frames/2.html'" />
 
     <title>Animation In HTML ~ No JavaScript, CSS, or Images</title>
     <meta
@@ -118,8 +118,8 @@
           <td width="440">
             <font>
               This piece is an experiment in creating an animation using only
-              HTML. There is no JavaScript, CSS, or images involved. You can
-              read more about it
+              HTML. There is no JavaScript, CSS, or images involved. (Warning
+              that there might be some flashing) You can read more about it
               <a href="/about.html"><font>here</font></a
               >. If you're using chrome
               <a href="/frames-chrome/1.html"
