--- a/site/frames-chrome/7.html
+++ b/site/frames-chrome/7.html
@@ -103,14 +103,14 @@
       <font> ~ </font>
       <a href="https://podcast.alanwsmith.com"><font>podcast</font></a>
       <br />
-      <font> ---- </font>
+      <br />
       <table>
         <tr>
           <td width="440">
             <font>
               This piece is an experiment in creating an animation using only
-              HTML. There is no JavaScript, CSS, or images involved. You can
-              read more about it
+              HTML. There is no JavaScript, CSS, or images involved. (Warning
+              that there might be some flashing) You can read more about it
               <a href="/about.html"><font>here</font></a
               >. (Becasue of the refresh speed you might need to close the
               browser to stop it if the links don&apos;t work.)
