--- a/site/frames/2.html
+++ b/site/frames/2.html
@@ -111,8 +111,8 @@
             <td width="440">
               <font>
                 This piece is an experiment in creating an animation using only
-                HTML. There is no JavaScript, CSS, or images involved. You can
-                read more about it
+                HTML. There is no JavaScript, CSS, or images involved. (Warning
+                that there might be some flashing) You can read more about it
                 <a href="/about.html"><font>here</font></a
                 >. If you're using chrome
                 <a href="/frames-chrome/1.html"
