Updated to use iframes

--- a/site/frames-chrome/13.html
+++ b/site/frames-chrome/13.html
@@ -1,126 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="refresh" content="0.1;URL='14.html'" />
-    <meta http-equiv="expires" content="Mon, 20 Jan 2025 11:12:01 GMT" />
-    <title>HTML Animation - Chrome</title>
-    <meta
-      property="og:title"
-      content="HTML Animation - No JavaScript, CSS, or Images"
-    />
-    <meta
-      name="twitter:title"
-      content="HTML Animation - No JavaScript, CSS, or Images"
-    />
 
-    <meta
-      name="description"
-      content="Playing around with making animations without JavaScript, CSS, or Images"
-    />
-    <meta
-      property="og:description"
-      content="Playing around with making animations without JavaScript, CSS, or Images"
-    />
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="refresh" content="0.1;URL='14.html'" />
+  <meta http-equiv="expires" content="Mon, 20 Jan 2025 11:12:01 GMT" />
+  <title>HTML Animation - Chrome</title>
+  <meta property="og:title" content="HTML Animation - No JavaScript, CSS, or Images" />
+  <meta name="twitter:title" content="HTML Animation - No JavaScript, CSS, or Images" />
 
-    <meta
-      property="og:image"
-      content="https://html-animation.alanwsmith.com/og-images/main.png"
-    />
-    <meta
-      name="twitter:image"
-      content="https://html-animation.alanwsmith.com/og-images/main.png"
-    />
+  <meta name="description" content="Playing around with making animations without JavaScript, CSS, or Images" />
+  <meta property="og:description" content="Playing around with making animations without JavaScript, CSS, or Images" />
 
-    <meta property="og:type" content="article" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:creator" content="@theidofalan" />
+  <meta property="og:image" content="https://html-animation.alanwsmith.com/og-images/main.png" />
+  <meta name="twitter:image" content="https://html-animation.alanwsmith.com/og-images/main.png" />
 
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="/favicons/16x16.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="/favicons/32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="96x96"
-      href="/favicons/96x96.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="128x128"
-      href="/favicons/128x128.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="196x196"
-      href="/favicons/196x196.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="228x228"
-      href="/favicons/228x228.png"
-    />
-    <link
-      rel="apple-touch-icon-precomposed"
-      sizes="152x152"
-      href="/favicons/152x152.png"
-    />
-    <link
-      rel="apple-touch-icon-precomposed"
-      sizes="167x167"
-      href="/favicons/167x167.png"
-    />
-    <link
-      rel="apple-touch-icon-precomposed"
-      sizes="180x180"
-      href="/favicons/180x180.png"
-    />
-  </head>
-  <body>
-    <center>
-      <a href="/frames/1.html"> <font>Safari/Firefox Version</font></a
-      ><font> ~ </font>
-      <font>Chrome Version</font>
-      <font> ~ </font>
-      <a href="/about.html"><font>about</font></a>
-      <font> ~ </font>
-      <a href="https://www.alanwsmith.com/"><font>alanwsmith.com</font></a>
-      <font> ~ </font>
+  <meta property="og:type" content="article" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:creator" content="@theidofalan" />
+  
+</head>
 
-      <a href="https://links.alanwsmith.com"><font>links</font></a>
-      <font> ~ </font>
-      <a href="https://podcast.alanwsmith.com"><font>podcast</font></a>
-      <br />
-      <br />
-      <table>
-        <tr>
-          <td width="440">
-            <font>
-              This piece is an experiment in creating an animation using only
-              HTML. There is no JavaScript, CSS, or images involved. (Warning
-              that there might be some flashing) You can read more about it
-              <a href="/about.html"><font>here</font></a
-              >. (Becasue of the refresh speed you might need to close the
-              browser to stop it if the links don&apos;t work.)
-            </font>
-          </td>
-        </tr>
-      </table>
+<body bgcolor="#000000">
+  <center>
+    <font color="#DDDDDD">
       <font size="1">
         <pre><code>
-    
+            
                                 : ,                     
                               , % ;                     
                             : ? * ,                     
@@ -139,8 +45,9 @@
                     , ,               ; ,               
 , , , , , , , , , , , , , , , , , , , ; + : , , , , , : 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
-    </code></pre>
+          </code></pre>
       </font>
-    </center>
-  </body>
+    </font>
+  </center>
+</body>
 </html>
