--- a/site/index.html
+++ b/site/index.html
@@ -1,157 +1,166 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="refresh" content="4;URL='frames/2.html'" />
 
-    <title>Animation In HTML ~ No JavaScript, CSS, or Images</title>
-    <meta
-      name="description"
-      content="Playing around with making animations without JavaScript, CSS, or Images"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta property="og:url" content="https://html-animation.alanwsmith.com/" />
-    <meta property="og:type" content="website" />
-    <meta
-      property="og:title"
-      content="Animation In HTML ~ No JavaScript, CSS, or Images"
-    />
-    <meta
-      property="og:description"
-      content="Playing around with making animations without JavaScript, CSS, or Images"
-    />
-    <meta
-      property="og:image"
-      content="https://html-animation.alanwsmith.com/og-images/main-cachebust-2.png"
-    />
+  <title>Animation In HTML ~ No JavaScript, CSS, or Images</title>
+  <meta name="description" content="Playing around with making animations without JavaScript, CSS, or Images" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta property="twitter:domain" content="html-animation.alanwsmih.com" />
-    <meta
-      property="twitter:url"
-      content="https://html-animation.alanwsmith.com/"
-    />
-    <meta
-      name="twitter:title"
-      content="Animation In HTML ~ No JavaScript, CSS, or Images"
-    />
-    <meta
-      name="twitter:description"
-      content="Playing around with making animations without JavaScript, CSS, or Images"
-    />
-    <meta
-      name="twitter:image"
-      content="https://html-animation.alanwsmith.com/og-images/main-cachebust-2.png"
-    />
+  <meta property="og:url" content="https://html-animation.alanwsmith.com/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Animation In HTML ~ No JavaScript, CSS, or Images" />
+  <meta property="og:description" content="Playing around with making animations without JavaScript, CSS, or Images" />
+  <meta property="og:image" content="https://html-animation.alanwsmith.com/og-images/main-cachebust-2.png" />
 
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="/favicons/16x16.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="/favicons/32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="96x96"
-      href="/favicons/96x96.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="128x128"
-      href="/favicons/128x128.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="196x196"
-      href="/favicons/196x196.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="228x228"
-      href="/favicons/228x228.png"
-    />
-    <link
-      rel="apple-touch-icon-precomposed"
-      sizes="152x152"
-      href="/favicons/152x152.png"
-    />
-    <link
-      rel="apple-touch-icon-precomposed"
-      sizes="167x167"
-      href="/favicons/167x167.png"
-    />
-    <link
-      rel="apple-touch-icon-precomposed"
-      sizes="180x180"
-      href="/favicons/180x180.png"
-    />
-  </head>
-  <body>
-    <center>
-      <font>Safari/Firefox Version</font>
-      <font> ~ </font>
-      <a href="/frames-chrome/1.html"><font>Chrome Version</font></a>
-      <font> ~ </font>
-      <a href="/about.html"><font>about</font></a>
-      <font> ~ </font>
-      <a href="https://www.alanwsmith.com/"><font>alanwsmith.com</font></a>
-      <font> ~ </font>
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta property="twitter:domain" content="html-animation.alanwsmih.com" />
+  <meta property="twitter:url" content="https://html-animation.alanwsmith.com/" />
+  <meta name="twitter:title" content="Animation In HTML ~ No JavaScript, CSS, or Images" />
+  <meta name="twitter:description" content="Playing around with making animations without JavaScript, CSS, or Images" />
+  <meta name="twitter:image" content="https://html-animation.alanwsmith.com/og-images/main-cachebust-2.png" />
 
-      <a href="https://links.alanwsmith.com"><font>links</font></a>
-      <font> ~ </font>
-      <a href="https://podcast.alanwsmith.com"><font>podcast</font></a>
-      <br />
+  <link rel="prefetch" href="/frames/1.html" />
+  <link rel="prefetch" href="/frames/2.html" />
+  <link rel="prefetch" href="/frames/3.html" />
+  <link rel="prefetch" href="/frames/4.html" />
+  <link rel="prefetch" href="/frames/5.html" />
+  <link rel="prefetch" href="/frames/6.html" />
+  <link rel="prefetch" href="/frames/7.html" />
+  <link rel="prefetch" href="/frames/8.html" />  
+  <link rel="prefetch" href="/frames-chrome/1.html" />
+  <link rel="prefetch" href="/frames-chrome/2.html" />
+  <link rel="prefetch" href="/frames-chrome/3.html" />
+  <link rel="prefetch" href="/frames-chrome/4.html" />
+  <link rel="prefetch" href="/frames-chrome/5.html" />
+  <link rel="prefetch" href="/frames-chrome/6.html" />
+  <link rel="prefetch" href="/frames-chrome/7.html" />
+  <link rel="prefetch" href="/frames-chrome/8.html" />
+  <link rel="prefetch" href="/frames-chrome/9.html" />
+  <link rel="prefetch" href="/frames-chrome/10.html" />
+  <link rel="prefetch" href="/frames-chrome/11.html" />
+  <link rel="prefetch" href="/frames-chrome/12.html" />
+  <link rel="prefetch" href="/frames-chrome/13.html" />
+  <link rel="prefetch" href="/frames-chrome/14.html" />
+  <link rel="prefetch" href="/frames-chrome/15.html" />
+  <link rel="prefetch" href="/frames-chrome/16.html" />
+
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicons/16x16.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicons/32x32.png" />
+  <link rel="icon" type="image/png" sizes="96x96" href="/favicons/96x96.png" />
+  <link rel="icon" type="image/png" sizes="128x128" href="/favicons/128x128.png" />
+  <link rel="icon" type="image/png" sizes="196x196" href="/favicons/196x196.png" />
+  <link rel="icon" type="image/png" sizes="228x228" href="/favicons/228x228.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="152x152" href="/favicons/152x152.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="167x167" href="/favicons/167x167.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="180x180" href="/favicons/180x180.png" />
+</head>
+
+<body bgcolor="#000000">
+  <center>
+    <a href="https://www.alanwsmith.com/">
+      <font>alanwsmith.com</font>
+    </a>
+    <font color="#dddddd"> ~ </font>
+    <a href="/about.html">
+      <font>about</font>
+    </a>
+    <font> ~ </font>
+
+    <a href="https://links.alanwsmith.com">
+      <font>other html only links</font>
+    </a>
+    <font> ~ </font>
+    <a href="https://podcast.alanwsmith.com">
+      <font>podcast</font>
+    </a>
+    <br />
+
+    <font color="#ffffff">
       <font> ------ </font>
+
       <table>
-        <tr>
-          <td width="440">
-            <font>
-              This piece is an experiment in creating an animation using only
-              HTML. There is no JavaScript, CSS, or images involved. (Warning
-              that there might be some flashing) You can read more about it
-              <a href="/about.html"><font>here</font></a
-              >. If you're using chrome
-              <a href="/frames-chrome/1.html"
-                ><font>click here for a smoother version that works on some browsers</font></a
-              >
-            </font>
-          </td>
-        </tr>
+        <tbody>
+          <tr>
+            <td width="440">
+              <font>
+                <p>
+                  This piece is an experiment in creating an animation using
+                  only HTML. There is no JavaScript, CSS, or images involved.
+                </p>
+                <iframe  name="viewer" src="/frames/1.html" width="440" height="310"></iframe>
+                <p>
+                <a target="viewer" href="/frames-chrome/1.html">Switch to chrome version</a>
+              </p>
+                <p>
+                  The frames consists of ascii art based on &quot;<a
+                    href="https://en.wikipedia.org/wiki/The_Horse_in_Motion">
+                    <font>The Horse in Motion</font>
+                  </a>&quot; made by Eadweard Muybridge in 1878. Each frame is a
+                  separate HTML page. Animation between pages is done with
+                  `&lt;meta http-equiv=&quot;refresh&quot;&gt;` tags.
+                </p>
+                <p>
+                  As of April, 2022, Safari and Firefox require whole seconds
+                  for the refresh. So, the
+                  <a href="/frames/1.html">
+                    <font>basic version</font>
+                  </a>
+                  is a set of eight frames running at 1FPS. Chrome allows
+                  refresh times less than a second.
+                  <a href="/frames-chrome/1.html">
+                    <font>That version</font>
+                  </a>
+                  is sixteen frames set to change every 0.1 seconds which runs
+                  at roughly 10FPS depending on the computer, network, etc...
+                </p>
+                <p>
+                  The pages are very light, but there may be some delay and a
+                  little flash between frames if you&apos;re on a slow
+                  connection. It also may not render properly on some mobile
+                  devices due to the nature of it&apos;s construction.
+                </p>
+                <p>
+                  This site is the forth in a series inspired by
+                  <a href="https://twitter.com/whitep4nth3r/status/1510568114966171649">
+                    <font>this tweet</font>
+                  </a>
+                  from
+                  <a href="https://twitter.com/whitep4nth3r">
+                    <font>whitep4nth3r</font>
+                  </a>. The other sites have
+                  <a href="https://ascii-art.alanwsmith.com/">
+                    <font>ascii art</font>
+                  </a>, a
+                  <a href="https://html-maze.alanwsmith.com/">
+                    <font>maze</font>
+                  </a>, and
+                  <a href="https://pixel-art.alanwsmith.com/">
+                    <font>pixel art</font>
+                  </a>
+                  (which is my other favorite).
+                </p>
+                <p>
+                  Here&apos;s
+                  <a href="https://github.com/alanwsmith/html-animation.alanwsmith.com">
+                    <font>the source code</font>
+                  </a>
+                  if you&apos;re interested.
+                </p>
+              </font>
+            </td>
+          </tr>
+        </tbody>
       </table>
-      <font size="1">
-        <pre><code>
-    
-                                                        
-                                , * :                   
-                                ; # ;                   
-                              + % +         , ;         
-                            ; # # ? ,   , * S S *       
-                    ,       ; * + + ? ; S # # # # *     
-      , , , : : ; ? S % ? ? ? + ; ? # # # # S ? % S +   
-      ? # # % ? S # # @ # # S # ? * ? S S % :   , + +   
-      + ? : , : S S % S # # % S ? * ? % S *             
-                ? # % S # # # S # # S ? ? ,             
-              : ? S S % : + % S # # # % :               
-              ? * * ? ,       , * # % ;                 
-              , ; * + ,       , ? % :                   
-                , ; , + ;   , ? + ; :                   
-                  :     ; , + + ; ; ,                   
-                        , * :                           
-, , , , , , , , , , , : * ; , , , , , , , , , , , , , , 
-% % % % % % % % % % % % % % % % % % % % % % % % % % % % 
-    </code></pre>
-      </font>
-    </center>
-  </body>
+    </font>
+    <font size="1">
+      <pre><code>
+        </code></pre>
+    </font>
+    </font>
+
+  </center>
+</body>
+
 </html>
